pascal/grammar.txt
    program : PROGRAM variable SEMI block DOT
    block: declarations compound_statement
    declarations: VAR (variable_declaration SEMI)+ | empty
    variable_declaration: variable (COMMA variable)* COLON type
    type: INTEGER | REAL
    compound_statement: BEGIN statement_list END
    statement_list: statement | statement SEMI statement_list
    statement: compound_statement | assignment_statement | empty
    assignment_statement: variable ASSIGN expr
    variable: ID
    empty:
    expr: term ((PLUS | MINUS) term)*
    term: factor ((MULTIPLY | INTEGER_DIVIDE | FLOAT_DIVIDE) factor)*
    factor: (PLUS | MINUS) factor | INTEGER_CONST | REAL_CONST | LPAREN expr RPAREN | ID
